Fix PR Changes page width creates horizontal scrollbar (#654)

--- a/web/src/components/DiffViewer/DiffViewer.module.scss
+++ b/web/src/components/DiffViewer/DiffViewer.module.scss
@@ -279,7 +279,7 @@
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 
-    max-width: max(calc(100vw - 320px), 960px);
+    max-width: max(calc(100vw - 400px), 960px);
 
     &.standalone {
       max-width: max(calc(100vw - 280px), 960px);
